Alteração no Layout

--- a/Login.html
+++ b/Login.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>    
-
+    <div class="container">
         <div class="der-login">
             <h1>
-                Log In
+                Acesse sua conta
             </h1>
 
             <div class="die-inputs">
@@ -41,12 +41,11 @@
 
             <footer>
                 <button class="btn-login">
-                    Log In
+                    Login
                 </button>
             </footer>
         </div>
-
-    
+    </div>    
 </body>
 
 </html>
